TEST_PROGRAMS/VALID/08/blankType.go
package main

func main() {
  type _ int;
  var _,_,_ = 3,4,5;
}
