TEST_PROGRAMS/INVALID/11/test4.go
package main;

var (
	test int = 5
	jeremy string = true,
	)
